--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="author" content="Chris Mills">
+  <meta name="description" content="The MDN Learning Area aims to provide
+complete beginners to the Web with all they need to know to get
+started with developing web sites and applications.">
   <title>我的測試主頁</title>
   <link href="styles/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Quicksand&display=swap" rel="stylesheet">
@@ -11,9 +15,12 @@
 
 <body>
   <h1><strong>Mozilla 酷毙了！</strong>:)</h1>
+  <a href="https://www.mozilla.org/en-US/">
   <img src="images/firefox-icon.png" alt="图片1不可见，请联系管理员" />
+</a>
 
   <p>Mozilla 是一个全球社区，这里聚集着来自五湖四海的</p>
+  <p>Japanese example: ご飯が熱い。</p>
   <ul>
     <li>技术人员</li>
     <li>思考者</li>
@@ -23,6 +30,21 @@
   <p> 为了达成我们共同的理想，我们遵循一系列的价值观和理念，请参阅<a href="https://www.mozilla.org/zh-CN/about/manifesto/">Mozilla 宣言</a>。</p>
   <script src="scripts/main.js" defer></script>
   <button>切换用户</button>
+  <p><a href="http://www.example.com/large-report.pdf">
+    下载销售报告（PDF, 10MB）
+  </a></p>
+  
+  <p><a href="http://www.example.com/video-stream/">
+    观看视频（将在新标签页中播放, HD画质）
+  </a></p>
+  
+  <p><a href="http://www.example.com/car-game">
+    进入汽车游戏（需要Flash插件）
+  </a></p>
+  <a href="https://download.mozilla.org/?product=firefox-latest-ssl&os=win64&lang=en-US"
+   download="firefox-latest-64bit-installer.exe">
+  Download Latest Firefox for Windows (64-bit) (English, US)
+</a>
 </body>
 
 </html>
